--- a/hub/index.html
+++ b/hub/index.html
@@ -1336,7 +1336,7 @@
 				<a class="page-link page-link-big" href="../D3-020.html"> 
 					<div class="page">
 					<h2 class="project-title">Visual, interactive explanations of astronomical phenomena</h2>
-					<div class="page-bgimg" style="background-image: url('img/d3-020-big.png')"></div>
+					<div class="page-bgimg" style="background-image: url('img/d3-020-big.png');"></div>
 					<div class="page-text">
 							<p class="page-title"> 
 								Stellar evolution and the<br> Hertzsprung-Russell diagram [final].
