--- a/D3-008.html
+++ b/D3-008.html
@@ -105,9 +105,6 @@
       Attempts at an interactive Hertzsprung-Russell diagram, that explains the evolutionary path of stars.
     </p>
     <p style="font-weight:100; margin: 0;">
-      Click on stars to open detailed view.
-    </p>
-    <p style="font-weight:100; margin: 0;">
       <br>
       <a class="back" href="javascript:void(0)" onClick="returnNow();">Return to overview</a>
     </p>
@@ -254,8 +251,8 @@
                             .value(1);
 
     // Render the slider in the div
-    d3.select('#slider')
-      .call(slider);
+    // d3.select('#slider')
+    //   .call(slider);
     
     var draggerValueTemp = 1;
     var draggerValue;
